tests/Checker/everything/errors/20b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *20: if conditional is not boolean
Compilation was unsuccessful.
